<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4b4545"
    tools:context=".Converter">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fields"
        app:layout_constraintEnd_toEndOf="@+id/fields"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fields"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:onClick="clear"
            android:text="@string/clearButton"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/convertButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:onClick="convert"
            android:text="@string/convertButton"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContainer">

        <LinearLayout
            android:id="@+id/fieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/decLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decLabel"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/decInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/decDigits"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/octalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/octLabel"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/octInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/octDigits"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hexLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hexLabel"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/hexInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hexDigits"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/binLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binLabel"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/binInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/binDigits"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:scrollHorizontally="true"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>